# neuro120-final

./: .gitignore  README.md  flake.nix  pyproject.toml
circadian_feeding/: currents.py  experimental_data.py  food.py  ode.py  params.py  plot.py  simulate.py
data/: AgRP_Caspase-Douglass_5H.csv  AgRP_GF-Douglass_6I.csv  AgRP_control-Douglass_2G.csv  AgRP_mCherry-Douglass_5H.csv  Figure_6L_GFP-Douglass.csv  Figure_6L_TeNT-Douglass.csv  Ghrelin_hypothalamus-Bodosi_1-wpd.csv  Ghrelin_plasma-Bodosi_1-wpd.csv  Leptin_plasma-Bodosi_1-wpd.csv  SCN-Yamashita-wpd.csv  best_theta.npy
scripts/: FIGURES.ipynb  Leptin,_Ghrelin,_and_SCN_Function.ipynb  antonino.ipynb  dmh_testing.ipynb  generate_data.ipynb  lesion.ipynb  plots_for_paper.ipynb  plots_old.ipynb  replicate_figures.py  spz_dmh_sim.py
src/: __init__.py  currents.py  fitted_cosine_function.py  food.py  hormones.py  inputs.py  mylib.py  ode.py  p_fitting.py  parameter_display.py  params.py  plot.py  simulate.py
