[project]
name = "circadian_feeding"
version = "0.1.0"
description = "A minimal pyproject.toml"
authors = [
  {name = "Antonino Libarnes"},
  {name = "Soren James"},
  {name = "Theo Tobel"},
]
requires-python = ">=3.12"
dependencies = [
  "jupyter",
  "matplotlib",
  "numpy",
  "scipy",
  "pandas",
]
