[project]
name = "circadian_feeding"
version = "0.1.0"
description = "Neuro 120 final project"
authors = [
  {name = "Antonino Libarnes"},
  {name = "Soren James"},
  {name = "Theo Tobel"},
]
requires-python = ">=3.12"
dependencies = [
  "jupyter",
  "matplotlib",
  "numpy",
  "scipy",
  "pandas",
]

[tool.setuptools]
packages = ["circadian_feeding"]
